--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@ Team Diffərənt out 👊🎤💨
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <!-- <a class="navbar-brand" href="#"><img src="assets/img/differentLogoDark.png" alt="Different logo"></a> -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -140,7 +139,6 @@ Team Diffərənt out 👊🎤💨
                                     </li>
                                 </ul>
                             </div>
-                            <!-- <a class="button button-primary" href="https://diffrntworkspace.slack.com/" role="button" target="_blank">Contact on Slack</a> -->
                         </nav>
                     </div>
                 </div>
@@ -452,7 +450,7 @@ Team Diffərənt out 👊🎤💨
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="resultUitleg">
                 <div class="container hidden">
                     <div class="row">
-                        <div class="col-12 col-md-4">
+                        <div class="sticky col-12 col-md-4">
                             <h4>design system</h4>
                             <h3>Principles, Guidelines & Rules</h3>
                             <p>The guidelines we created are divided in three categories. These types of guidelines are meant to challenge the designers to push the boundaries.</p>
@@ -603,6 +601,81 @@ Team Diffərənt out 👊🎤💨
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section id="protoShow">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <h4>examples</h4>
+                            <h3>Validating the content of the motion matrix</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <ul class="nav nav-tabs" id="myTab02" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link button button-secondary active" id="protoShow01-tab" data-toggle="tab" href="#protoShow01" role="tab" aria-controls="protoShow01" aria-selected="true">Alert toast</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link button button-secondary" id="protoShow02-tab" data-toggle="tab" href="#protoShow02" role="tab" aria-controls="protoShow02" aria-selected="true">Filter accordion</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="tab-content" id="protoShowContent">
+                            <div class="protoShowWrapper tab-pane fade show active" id="protoShow01" role="tabpanel" aria-labelledby="protoShow01-tab">
+                                <div class="protoShowLeft col-12 col-md-6">
+                                    <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="">
+                                        <source src="assets/vid/proto01Left.mp4" type="video/mp4">
+                                        Your browser does not support the videwo tag.
+                                    </video>
+                                </div>
+                                <div class="protoShowRight col-12 col-md-6">
+                                    <img src="assets/img/proto01Right.png" alt="Code prototype 01">
+                                </div>
+                            </div>
+                            <div class="protoShowWrapper tab-pane fade show" id="protoShow02" role="tabpanel" aria-labelledby="protoShow02-tab">
+                                <div class="protoShowLeft col-12 col-md-6">
+                                    <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="" id="proto02Left">
+                                        <source src="assets/vid/proto02Left.mp4" type="video/mp4">
+                                        Your browser does not support the videwo tag.
+                                    </video>
+                                </div>
+                                <div class="protoShowRight col-12 col-md-6">
+                                    <img src="assets/img/proto02Right.png" alt="Code prototype 02">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="container-fluid">
+                    <div class="row">
+                        <div class="protoShowLeft col-12 col-md-6">
+                            <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="">
+                                <source src="assets/vid/proto01Left.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <div class="protoShowRight col-12 col-md-6">
+                            <img src="assets/img/proto01Right.png" alt="Code prototype 01">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="protoShowLeft col-12 col-md-6">
+                            <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="" id="proto02Left">
+                                <source src="assets/vid/proto02Left.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <div class="protoShowRight col-12 col-md-6">
+                            <img src="assets/img/proto02Right.png" alt="Code prototype 02">
+                        </div>
+                    </div>
+                </div> -->
             </section>
 
             <!--TESTING INTRO-->
