Deleted purple bg on testing part

--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@ Team Diffərənt out 👊🎤💨
                 </div>
             </section>
 
+            <!--PROTOTYPING EXAMPLES-->
             <section id="protoShow">
                 <div class="container">
                     <div class="row">
@@ -679,7 +680,7 @@ Team Diffərənt out 👊🎤💨
             </section>
 
             <!--TESTING INTRO-->
-            <section class=" sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="testing">
+            <section class=" sectionSpaceTop sectionSpaceBottom" id="testing">
                 <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
