--- a/index.html
+++ b/index.html
@@ -234,23 +234,23 @@ Team Diffərənt out 👊🎤💨
                     <div class="row">
                         <div class="cardFirst col-12 col-lg-4">
                             <div class="card">
-                                <h4>Succesfactor 1</h4>
+                                <h4>factor of succes 1</h4>
                                 <h3>Pain points</h3>
                                 <p>The pain points have been resolved, therefore they have been practically tested and backed-up theoretically.</p>
                             </div>
                         </div>
                         <div class="cardSecond col-12 col-lg-4">
                             <div class="card">
-                                <h4>Succesfactor 2</h4>
+                                <h4>factor of succes 2</h4>
                                 <h3>Motion language</h3>
                                 <p>The quality of the improvements that are made is backed-up based on the established principles, guidelines and rules. The ANWB is able to continue to develop and improve their motion design language.</p>
                             </div>
                         </div>
                         <div class="cardThird col-12 col-lg-4">
                             <div class="card">
-                                <h4>Succesfactor 3</h4>
+                                <h4>factor of succes 3</h4>
                                 <h3>Resources</h3>
-                                <p>The design system expansion is easily transferable and easy to use for the ANWB, especially for stakeholders Coen de Haar, Chloe Rice and Sanne Kloot. That way they can decide whether they want to spend more resources on motion in their design system. 
+                                <p>The design system expansion is easily transferable and easy to use for the ANWB, especially for stakeholders Coen de Heer, Chloé Rice and Sanne Kloot. That way they can decide whether they want to spend more resources on motion in their design system. 
                                 </p>
                             </div>
                         </div>
@@ -516,8 +516,8 @@ Team Diffərənt out 👊🎤💨
                             </div>
                         </div>
                         <div class="col-12 col-md-7 col-xl-6">
-                            <h4>subtitle</h4>
-                            <h3>Fancypancy title</h3>
+                            <h4>motion impact matrix</h4>
+                            <h3>Find the matching guideline</h3>
                             <ul class="nav nav-tabs" id="myTab01" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link button button-secondary active" id="sunbeam-tab" data-toggle="tab" href="#sunbeam" role="tab" aria-controls="sunbeam" aria-selected="false">Sunbeam</a>
@@ -532,7 +532,7 @@ Team Diffərənt out 👊🎤💨
                                     <a class="nav-link button button-secondary" id="ideal-tab" data-toggle="tab" href="#ideal" role="tab" aria-controls="breezy" aria-selected="true">Ideal UX</a>
                                 </li> -->
                             </ul>
-                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019). A method where Human Centered Design combined with the Golden Filter serves as a "funnel" with guidelines. This includes both the business and user needs.</p>
+                            <p>The motion impact matrix is a matrix that shows both the impact on behavior and the impact on the emotion of micro-interactions (through motion). This matrix shows impact on emotion on the vertical axis and impact on behavior on the horizontal axis. <br><br>After it has been determined where a certain interaction should be placed in the matrix, it is possible to use "overlays" of the guidelines to determine which motion guidelines and / or rule should be applied to the interaction in question.</p>
                         </div>
                     </div>
                 </div>
