Img are fading in

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Team Diffərənt out 👊🎤💨
             <!--WIDE TEAM IMAGE-->
             <section id="teamImage">
                 <div class="container-fluid hidden">
-                    <div class="row">
+                    <div class="fadeIn row">
                         <img src="assets/img/teamImageDesktop.jpg" class="imgDesktop" alt="Different team SKIITTTSKITTTTT 🤙">
                         <img src="assets/img/teamImageMobile.jpg" class="imgMobile" alt="Different team SKIITTTSKITTTTT 🤙">
                     </div>
@@ -231,8 +231,8 @@ Team Diffərənt out 👊🎤💨
                             <h5>To determine whether we have succesfully designed an expantion for the design system, we came up with a factor of success. This factor of succes is a way to measure the value of the concept.</h5>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="cardFirst col-12 col-lg-4">
+                    <div class="fadeIn row">
+                        <div class="cardFirst  col-12 col-lg-4">
                             <div class="card">
                                 <h4>factor of succes 1</h4>
                                 <h3>Pain points</h3>
@@ -278,7 +278,7 @@ Team Diffərənt out 👊🎤💨
             <section class="sectionSpaceBottom" id="whoDidWeWorkWith">
                 <div class="container hidden">
                     <div class="centeredRow row">
-                        <div class="col-12 col-md-6">
+                        <div class="fadeIn col-12 col-md-6">
                             <img src="assets/img/stakeholderMap.png" alt="Different stakeholdermap">
                         </div>
                         <div class="col-12 col-md-6">
@@ -303,7 +303,7 @@ Team Diffərənt out 👊🎤💨
                             <h5>During the research phase, we collected many insights through interviews with users, usability testing of the current website and a lot of desk research into (Atomic based) Design Systems (including Poncho) and motion design.</h5>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="fadeIn row">
                         <div class="cardFirst col-12 col-lg-4">
                             <div class="card">
                                 <h4>Discovery Phase</h4>
@@ -338,7 +338,7 @@ Team Diffərənt out 👊🎤💨
                             <h3>Our most <br>important insights</h3>
                             <p>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</p>
                         </div>
-                        <div class="col-12 col-md-8">
+                        <div class="fadeIn col-12 col-md-8">
                             <img src="assets/img/insightsANWB.png" alt="Insights about the ANWB Routeplanner">
                         </div>
                     </div>
@@ -365,7 +365,7 @@ Team Diffərənt out 👊🎤💨
             <section class="sectionSpaceBottom" id="goldenFilter">
                 <div class="container hidden">
                     <div class="centeredRow row">
-                        <div class="col-12 col-md-5">
+                        <div class="fadeIn col-12 col-md-5">
                             <img src="assets/img/golderFilter.png" alt="Golden Filter of UX">
                         </div>
                         <div class="col-12 offset-md-1 col-md-6">
@@ -396,7 +396,7 @@ Team Diffərənt out 👊🎤💨
             <!--POAR NEEM'N CARDS-->
             <section id="conceptCards">
                 <div class="container hidden">
-                    <div class="row">
+                    <div class="fadeIn row">
                         <div class="cardFirst col-12 offset-lg-2 col-lg-4">
                             <div class="card">
                                 <h4>Concept 1</h4>
@@ -428,7 +428,7 @@ Team Diffərənt out 👊🎤💨
                             <h5>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</h5>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="fadeIn row">
                         <div class="col-12">
                             <!-- <img src="assets/img/prototypeMockup.png" alt="Different X ANWB final masterprototype mockup"> -->
                             <div class="prototypeFrame">
@@ -455,7 +455,7 @@ Team Diffərənt out 👊🎤💨
                             <h3>Principles, Guidelines & Rules</h3>
                             <p>The guidelines we created are divided in three categories. These types of guidelines are meant to challenge the designers to push the boundaries.</p>
                         </div>
-                        <div class="col-12 col-md-8">
+                        <div class="fadeIn col-12 col-md-8">
                             <img src="assets/img/DSM.png" alt="The InVision DSM with Principles, Guidelines and Rules">
                         </div>
                     </div>
@@ -499,7 +499,7 @@ Team Diffərənt out 👊🎤💨
             <section id="motionMatrixExplained">
                 <div class="container hidden">
                     <div class="centeredRow row">
-                        <div class="col-12 col-md-5 col-xl-6">
+                        <div class="fadeIn col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent01">
                                 <div class="tab-pane fade show active" id="sunbeam" role="tabpanel" aria-labelledby="profile-tab">
                                     <img src="assets/img/motionMatrixSunbeam.png" alt="Our Motion Matrix model">
@@ -580,7 +580,7 @@ Team Diffərənt out 👊🎤💨
                             </ul>
                             <p>Based on knowledge about the difference between <i>prototyping to understand</i> and <i>prototyping to be understood</i> we learned from designer <a href="https://twitter.com/zach__johnston" target="_blank">Zach Johnston (Framer)</a>, we built bigger prototypes in Framer so we could test our motion principles on a “functional” routeplanner and we built simple prototypes using Principle to understand and explore multiple quick ideas. <br>We used GitHub for version control and quickly creating and sharing test-URLs. Sketch was our design-tool of choice because all Poncho-components already lived there.</p>
                         </div>
-                        <div class="col-12 col-md-5 col-xl-6">
+                        <div class="fadeIn col-12 col-md-5 col-xl-6">
                             <div class="tab-content" id="myTabContent02">
                                 <div class="tab-pane fade show active" id="framer" role="tabpanel" aria-labelledby="framer-tab">
                                     <img src="assets/img/toolFramer.png" alt="Using Framer">
@@ -626,7 +626,7 @@ Team Diffərənt out 👊🎤💨
                     </div>
                 </div>
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="fadeIn row">
                         <div class="tab-content" id="protoShowContent">
                             <div class="protoShowWrapper tab-pane fade show active" id="protoShow01" role="tabpanel" aria-labelledby="protoShow01-tab">
                                 <div class="protoShowLeft col-12 col-md-6">
@@ -680,7 +680,7 @@ Team Diffərənt out 👊🎤💨
             </section>
 
             <!--TESTING INTRO-->
-            <section class=" sectionSpaceTop sectionSpaceBottom" id="testing">
+            <section class=" sectionSpaceTop" id="testing">
                 <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
@@ -692,7 +692,7 @@ Team Diffərənt out 👊🎤💨
                             <h5>To validate the guidelines and rules we came up with, we got the opportunity to use the ANWB’s Usability-lab and test our prototypes.</h5>
                         </div>
                     </div>
-                    <div class="centeredRow row">
+                    <div class="fadeIn centeredRow row">
                         <div class="col-12 col-md-5 col-xl-6">
                             <img src="assets/img/testing.png" alt="Testing at ANWB's usability-lab">
                         </div>
@@ -740,7 +740,7 @@ Team Diffərənt out 👊🎤💨
             <!--CASEVID BOTTOM-->
             <section id="caseVideoBottom">
                 <div class="container hidden">
-                    <div class="col-12">
+                    <div class="fadeIn col-12">
                         <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
                         <img src="assets/img/headerBackgroundIMG.jpg" alt="Different case-video">
                     </div>
@@ -751,7 +751,7 @@ Team Diffərənt out 👊🎤💨
             <section class="sectionSpaceTop sectionSpaceBottom purpleBG noCard" id="differentOut">
                 <div class="container hidden">
                     <div class="row">
-                        <div class="cardFirst col-6 col-md-3">
+                        <div class="cardFirst fadeIn col-6 col-md-3">
                             <img src="assets/img/teamJellaWesterhout.png" alt="Jella Westerhout">
                             <h5>Interaction</h5>
                             <p>Jella verandert chaos in georganiseerde chaos</p>
@@ -761,7 +761,7 @@ Team Diffərənt out 👊🎤💨
                                 <a class="button button-primary" href="http://jellawesterhout.com/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
                             </div>
                         </div>
-                        <div class="cardFirst col-6 col-md-3">
+                        <div class="cardFirst fadeIn col-6 col-md-3">
                             <img src="assets/img/teamMichelVanHeest.png" alt="Michel van Heest">
                             <h5>Prototyping</h5>
                             <p>Michel is onze ambitieuze special snowflake</p>
@@ -772,7 +772,7 @@ Team Diffərənt out 👊🎤💨
                                 <a class="button button-primary" href="https://michelvanheest.com/" target="_blank"><i class="fas fa-laptop"></i></a>
                             </div>
                         </div>
-                        <div class="col-6 col-md-3">
+                        <div class="fadeIn col-6 col-md-3">
                             <img src="assets/img/teamCorneVanDenBoogert.png" alt="Corné van den Boogert">
                             <h5>Visual</h5>
                             <p>Corné voorziet ons van koffie en slechte humor</p>
@@ -782,13 +782,13 @@ Team Diffərənt out 👊🎤💨
                                 <a class="button button-primary" href="" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
                             </div>
                         </div>
-                        <div class="col-6 col-md-3">
+                        <div class="fadeIn col-6 col-md-3">
                             <img src="assets/img/teamKayleighDeHaan.png" alt="Kayleigh de Haan">
                             <h5>Concepting</h5>
                             <p>Kayleigh is onze slimme, vrolijke krullenbol</p>
                             <div class="differentSocials">
-                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
-                                <a class="button button-primary" href="" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
+                                <a class="button button-primary" href="https://dribbble.com/kayleighdehaan" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
+                                <a class="button button-primary" href="https://www.linkedin.com/in/kayleigh-de-haan-b98735164/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
                                 <a class="button button-primary" href="https://www.kayleighdehaan.nl/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
                             </div>
                         </div>
