--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Team Diffərənt out 👊🎤💨
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-8 col-xl-9">
-                        <h6>een superhippe subtitle die kan wel over 2 regels heenvallen want dat is natuurlijk heel cool.</h6>
+                        <h6>The addition of motion principles, guidelines and rules to the ANWB’s Design System Poncho contributes to a consistent visual translation of the brand and the ultimate user experience.</h6>
                     </div>
                 </div>
                 <div class="row">
@@ -268,7 +268,7 @@ Team Diffərənt out 👊🎤💨
                     </div>
                     <div class="row">
                         <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
-                            <h5>During the minor <span class="purpleText">User Interface and Experience Design</span> we got the assignment to investigate en develop what motion can contribute to the user experience en accessibility of the ANWB online visitors digital experience. For this we had to make an extension to <span class="purpleText">ANWB's Design System Poncho</span> through principles and a rationale. </h5>
+                            <h5>During the minor <span class="purpleText">User Interface and Experience Design</span> we got the assignment to investigate en develop what motion can contribute to the user experience and accessibility of the ANWB's online visitors digital experience. For this we had to make an extension to <span class="purpleText">ANWB's Design System Poncho</span> through principles and a back these up with a substantiation.</h5>
                         </div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="col-12 offset-md-1 col-md-6">
                             <h4>concepting</h4>
                             <h3>The Golden Filter of UX</h3>
-                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019). A method where Human Centered Design combined with the Golden Filter serves as a "funnel" with guidelines. This includes both the business and user needs. </p>
+                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019). A method where Human Centered Design combined with the Golden Filter serves as a "funnel" to create guidelines. This includes both the business and user needs. </p>
                         </div>
                     </div>
                 </div>
@@ -401,14 +401,14 @@ Team Diffərənt out 👊🎤💨
                             <div class="card">
                                 <h4>Concept 1</h4>
                                 <h3>Hierarchy</h3>
-                                <p>Pijnpunten en de kwaliteit van de hiervoor gemaakte verbeteringen zijn te onderbouwen aan de hand van opgestelde principles, guidelines en rules. Deze principles, guidelines en rules zijn ook weer verder inzetbaar voor de ANWB in een verdere uitbreiding en het zelf oppakken van het ontwikkelen van een verdere motion design language.</p>
+                                <p>The information architecture and layout / - content distribution on the website does not meet users' expectations. Because we thought of  concept direction 1 as a very important part of creating the optimal user experience, we did present this concept to the product owners, but we kept our focus on micro-interactions through motion.</p>
                             </div>
                         </div>
                         <div class="col-12 col-lg-4" id="conceptChosen">
                             <div class="card">
                                 <h4>Concept 2</h4>
                                 <h3>Motion design</h3>
-                                <p>Het geheel is duidelijk overdraagbaar en toepasbaar voor de ANWB, specifiek stakeholders Coen de Heer, Chloë Rice en Sanne Kloot zodat zij een onderbouwde beslissing kunnen maken over de ROI van het besteden van verdere ANWB-resources aan het verder werken aan motion design binnen hun design system.</p>
+                                <p>The website contains (almost) no motion through micro-interactions. As a result, the ANWB website does not meet the ultimate user experience that the ANWB wants to achieve. To explore the limits of motion through micro-interactions within this concept direction, we have drafted principle and guideline directions. Mild, playfull and nudging. This is the concept we have focused on after consultation with the client. We only had to take a second look at the names of the guideline directions and the differentiation of these guideline directions.</p>
                             </div>
                         </div>
                     </div>
@@ -463,17 +463,17 @@ Team Diffərənt out 👊🎤💨
                         <div class="cardFirst col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Blue sky</h3>
-                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019).</p>
+                            <p>The Blue Sky guidelines are meant for elements that give the users a feeling of calmth and hierarchy and meets the expectations of the users. For example a page that now scrolls down and creates a better feeling of context.</p>
                         </div>
                         <div class="cardSecond col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Sunbeam</h3>
-                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019).</p>
+                            <p>The Sunbeam guidelines are meant for elements that give the users emotion in some form of feedback. For example an inputfield that turns red when a mistake is made.</p>
                         </div>
                         <div class="col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Breezy</h3>
-                            <p>To learn how to design valuable guidelines as a team, we followed a workshop by Daniel de Wit. In this workshop we used his own developed methodology. The Golden Filter of UX ”(de Wit, 2019).</p>
+                            <p>The Breezy guidelines are meant to nudge the users to take a certain action or to inform them about something important without bothering them. For example an alert that tells them about traffic.</p>
                         </div>
                     </div>
                 </div>
@@ -697,8 +697,8 @@ Team Diffərənt out 👊🎤💨
                             <img src="assets/img/testing.png" alt="Testing at ANWB's usability-lab">
                         </div>
                         <div class="col-12 col-md-7 col-xl-6">
-                            <h4>subtitle</h4>
-                            <h3>Fancypancy title</h3>
+                            <h4>testing</h4>
+                            <h3>Validating our work</h3>
                             <p>Because testing if motion is the reason for a change in behavior, attitude and / or emotion, we tested the impact of motion using the methode A/B testing. By using this methode it was possible to discover how people responded to the current website and if there was a change in behavior when motion was added to the website. These tests are performed in the ANWB’s Usability-lab (master prototypes) and at school (mini prototypes).</p>
                         </div>
                     </div>
@@ -754,7 +754,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="cardFirst fadeIn col-6 col-md-3">
                             <img src="assets/img/teamJellaWesterhout.png" alt="Jella Westerhout">
                             <h5>Interaction</h5>
-                            <p>Jella verandert chaos in georganiseerde chaos</p>
+                            <p>Jella changes chaos into organized chaos</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/JellaWesterhout" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a class="button button-primary">
                                 <a class="button button-primary" href="https://www.linkedin.com/in/jella-westerhout-4baa27161/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
@@ -764,7 +764,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="cardFirst fadeIn col-6 col-md-3">
                             <img src="assets/img/teamMichelVanHeest.png" alt="Michel van Heest">
                             <h5>Prototyping</h5>
-                            <p>Michel is onze ambitieuze special snowflake</p>
+                            <p>Michel is our ambitious problemsolver</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/michelvanheest" target="_blank"><i class="fab fa-dribbble"></i></a>
                                 <a class="button button-primary" href="https://twitter.com/michelvanheest" target="_blank"><i class="fab fa-twitter"></i></a class="button button-primary">
@@ -775,7 +775,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="fadeIn col-6 col-md-3">
                             <img src="assets/img/teamCorneVanDenBoogert.png" alt="Corné van den Boogert">
                             <h5>Visual</h5>
-                            <p>Corné voorziet ons van koffie en slechte humor</p>
+                            <p>Corné provides us with bad humor and a visual perspective</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/Cornoot93" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
                                 <a class="button button-primary" href="https://www.linkedin.com/in/corné-van-den-boogert-aab41792/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
@@ -785,7 +785,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="fadeIn col-6 col-md-3">
                             <img src="assets/img/teamKayleighDeHaan.png" alt="Kayleigh de Haan">
                             <h5>Concepting</h5>
-                            <p>Kayleigh is onze slimme, vrolijke krullenbol</p>
+                            <p>Kayleigh is our cheerfull idea-machine</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/kayleighdehaan" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
                                 <a class="button button-primary" href="https://www.linkedin.com/in/kayleigh-de-haan-b98735164/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
